# cs-club-ac-cabinet

games/arcade_chess/: config.js
games/cube_checkers/: CMakeLists.txt  State_Game.cpp  State_Game.hpp  State_GameOver.cpp  State_GameOver.hpp  State_Instructions.cpp  cube_checkers
